# rusty-chat-sync

./: .env.example  .gitattributes  .gitignore  Cargo.toml  README.md  index.html
frontend/: Cargo.toml
frontend/graphql/: mutations.rs  queries.rs
frontend/graphql/mutations/: create_message.graphql
frontend/graphql/queries/: list_messages.graphql
frontend/src/: main.rs
frontend/src/components/: chat.rs  message_input.rs  message_list.rs
frontend/src/models/: message.rs
frontend/src/tests/: integration_test.rs
infrastructure/: outputs.tf  variables.tf
infrastructure/appsync/: schema.graphql
infrastructure/dynamodb/: tables.tf
public/styles/: animations.css  globals.css  main.css  responsive.css  variables.css
public/styles/components/: chat-main.css  chat.css  conversation-list.css  error-banner.css  forms.css  message-input.css  messages.css
scripts/: deploy.sh  deploy_frontend.sh  terraform.sh
src/: lib.rs  main.rs
src/components/: app.rs  chat.rs  chat_status.rs  confirm_signup.rs  conversation_list.rs  login.rs  message_input.rs  message_list.rs  mod.rs  signup.rs
src/graphql/: mod.rs  mutations.rs  queries.rs  subscriptions.rs  types.rs
src/models/: conversation.rs  message.rs  mod.rs  user.rs
src/services/: auth.rs
src/state/: auth_state.rs  chat_state.rs  mod.rs
src/styles/: styles.css
src/tests/: integration_test.rs
src/utils/: config.rs  graphql_client.rs  mod.rs  websocket.rs
terraform/: main.tf  outputs.tf  providers.tf  variables.tf
terraform/.terraform/modules/: modules.json
terraform/appsync/: schema.graphql
terraform/appsync/resolvers/: Message.author.req.vtl  Mutation.createMessage.req.vtl  Mutation.createMessage.res.vtl  Mutation.createUser.req.vtl  Mutation.updateLastSeen.req.vtl  Mutation.updateUserStatus.req.vtl  Query.getConversation.req.vtl  Query.getUser.req.vtl  Query.listMessages.req.vtl  Query.listMessages.res.vtl  Query.listUsers.req.vtl
terraform/dynamodb/: tables.tf  variables.tf
