[package]
name = "rusty_chat_sync"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web/WASM dependencies
yew = { version = "0.21.0", features = ["csr"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "HtmlElement",
    "Window",
    "Document",
    "Headers",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Storage",
] }
gloo = { version = "0.11.0", features = [
    "timers",
    "storage",
    "net",
    "futures",
] }
gloo-net = { version = "0.6.0", features = ["websocket"] }
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
gloo-timers = "0.3.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utils
uuid = { version = "1.1", features = ["v4", "js"] }
chrono = { version = "0.4", features = ["wasmbind"] }
strum_macros = "0.26"
lazy_static = "1.4"
futures = "0.3"
base64 = "0.22"
instant = { version = "0.1", features = ["wasm-bindgen"] }

# TODO: Crates for src/utils/config.rs, see note there.
dotenv_codegen = "0.15"
once_cell = "1.19.0"

# HTTP client with WASM support
reqwest = { version = "0.12.9", features = ["json"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[lib]
name = "rusty_chat_sync_lib"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "rusty_chat_sync"
path = "src/main.rs"
[profile.release]
opt-level = "s"
